--- a/DTPS_MLB.html
+++ b/DTPS_MLB.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>DTPS_MLB/title>
+<title>DTPS_MLB</title>
 </head>
 <body bgcolor="000000">
 <table align="center" border="0" width="100%">
