--- a/CAT.html
+++ b/CAT.html
@@ -9,7 +9,7 @@
 <table align="center" border="0" width="100%">
 <tbody>
 <tr>
-<td align="center"><img alt="" height="75" src="DTPS-CATjpg" width="1500"/></td>
+<td align="center"><img alt="" height="75" src="DTPS-CAT.jpg" width="1500"/></td>
 </tr>
 </tbody>
 </table>
