--- a/CAT1.html
+++ b/CAT1.html
@@ -9,7 +9,7 @@
 <table align="center" border="0" width="100%">
 <tbody>
 <tr>
-<td align="center"><img alt="" height="40" src="CAT1jpg" width="1500"/></td>
+<td align="center"><img alt="" height="40" src="CAT1.jpg" width="1500"/></td>
 </tr>
 </tbody>
 </table>
