--- a/CAT7.html
+++ b/CAT7.html
@@ -8,7 +8,7 @@
 <table align="center" border="0" width="100%">
 <tbody>
 <tr>
-<td align="center"><img alt="" height="40" src="CAT7jpg" width="1500"/></td>
+<td align="center"><img alt="" height="40" src="CAT7.jpg" width="1500"/></td>
 </tr>
 </tbody>
 </table>
